# fred.rs

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  redis_centralized.conf  redis_server.pid  rustfmt.toml  test_users.acl
.circleci/: Dockerfile.sentinel  config.yml  install_redis_cli.sh  sentinel-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
appendonlydir/: appendonly.aof.4.base.rdb  appendonly.aof.manifest
crates/: README.md
crates/common/: Cargo.toml
crates/common/src/: error.rs  inner.rs  lib.rs  macros.rs  router.rs  utils.rs
crates/common/src/commands/: command.rs  mod.rs  responders.rs  scan.rs
crates/common/src/net/: dns.rs  mod.rs  protocol.rs
crates/common/src/runtime/: _tokio.rs
crates/common/src/trace/: README.md  disabled.rs  enabled.rs
crates/common/src/types/: config.rs  events.rs  mocks.rs  mod.rs  responses.rs  scan.rs  values.rs
crates/fred/: Cargo.toml
crates/fred/src/: lib.rs  utils.rs
crates/fred/src/protocol/: command.rs  responders.rs
crates/fred/src/router/: replicas.rs
crates/fred/src/types/: common.rs
crates/fred/tests/: users.acl
crates/fred/tests/docker/compose/: cluster-tls.yml
crates/fred/tests/docker/overrides/: default.conf  unix-socket.conf
crates/fred/tests/docker/runners/images/: ci.dockerfile
crates/fred/tests/scripts/: install_tls_cluster.sh  utils.sh
crates/fred/tests/scripts/tls/: node-1.cnf  node-2.cnf  node-3.cnf  node-4.cnf
crates/i-acl/: Cargo.toml
doc/: design.md  search-index.js  settings.html  src-files.js
doc/fred/: all.html  index.html  sidebar-items.js
doc/fred/clients/: struct.SentinelClient.html
doc/fred/error/: enum.RedisErrorKind.html  struct.RedisError.html
doc/fred/interfaces/: fn.spawn_event_listener.html  trait.AuthInterface.html  trait.ClientInterface.html  trait.ConfigInterface.html  trait.EventInterface.html  trait.HashesInterface.html  trait.HeartbeatInterface.html  trait.KeysInterface.html  trait.MemoryInterface.html  trait.PubsubInterface.html  trait.RedisJsonInterface.html  trait.SentinelInterface.html  trait.ServerInterface.html  trait.StreamsInterface.html  type.RedisResult.html
doc/fred/types/: constant.DEFAULT_JITTER_MS.html  enum.AggregateOperation.html  enum.Aggregator.html  enum.BackpressurePolicy.html  enum.ClientKillType.html  enum.ClusterDiscoveryPolicy.html  enum.ClusterState.html  enum.Expiration.html  enum.ExpireOptions.html  enum.GetLabels.html  enum.IndexKind.html  enum.InfoKind.html  enum.MessageKind.html  enum.ReconnectPolicy.html  enum.RedisValue.html  enum.RedisValueKind.html  enum.ReducerFunc.html  enum.Resp3Frame.html  enum.ScanType.html  enum.SentinelFailureKind.html  enum.ServerConfig.html  enum.ShutdownFlags.html  enum.SortOrder.html  enum.SpellcheckTerms.html  enum.Timestamp.html  enum.TlsHostMapping.html  enum.Toggle.html  enum.XID.html  enum.ZCmp.html  enum.ZRangeBound.html  enum.ZSort.html  struct.BackpressureConfig.html  struct.CustomCommand.html  struct.DatabaseMemoryStats.html  struct.GeoPosition.html  (+21 more)
docs/: README.md  cluster-tls.md  features.md  pipelining.md
docs/glommio/: search-index.js  src-files.js
docs/tokio/: help.html  search-index.js  settings.html  src-files.js
examples/: README.md  axum.rs  basic.rs  blocking.rs  client_tracking.rs  custom.rs  dns.rs  dynamic_pool.rs  events.rs  globals.rs  glommio.rs  keyspace.rs  lua.rs  misc.rs  monitor.rs  pipeline.rs  pool.rs  prometheus.rs  pubsub.rs  redis_json.rs  replicas.rs  resilience.rs  scan.rs  sentinel.rs  serde.rs  serde_json.rs  static_pool.rs  streams.rs  tls.rs  transactions.rs
src/: _tokio.rs  client.rs  error.rs  globals.rs  inner.rs  interfaces.rs  lib.rs  macros.rs  main.rs  metrics.rs  pool.rs  response.rs  script.rs  sentinel.rs  types.rs  utils.rs
src/clients/: caching.rs  client.rs  dynamic_pool.rs  exclusive_pool.rs  mod.rs  node.rs  options.rs  pipeline.rs  pool.rs  pubsub.rs  redis.rs  replica.rs  sentinel.rs  transaction.rs
src/commands/: acl.rs  client.rs  client_interface.rs  cluster.rs  config.rs  geo.rs  hashes.rs  hyperloglog.rs  keys.rs  lists.rs  lua.rs  memory.rs  mod.rs  pubsub.rs  scan.rs  server.rs  sets.rs  slowlog.rs  sorted_sets.rs
src/glommio/: README.md  broadcast.rs  interfaces.rs  mod.rs  mpsc.rs  sync.rs
src/modules/: backchannel.rs  globals.rs  inner.rs  metrics.rs  mocks.rs  mod.rs  pool.rs  response.rs  types.rs
src/monitor/: mod.rs  parser.rs  utils.rs
src/multiplexer/: centralized.rs  clustered.rs  commands.rs  mod.rs  responses.rs  sentinel.rs  transactions.rs  types.rs  utils.rs
src/protocol/: cluster.rs  codec.rs  command.rs  connection.rs  debug.rs  hashers.rs  mod.rs  public.rs  responders.rs  tls.rs  types.rs  utils.rs
src/router/: centralized.rs  clustered.rs  commands.rs  connections.rs  mod.rs  replicas.rs  responses.rs  sentinel.rs  transactions.rs  types.rs  utils.rs
src/runtime/: README.md  _tokio.rs  mod.rs  sync.rs
src/trace/: README.md  disabled.rs  enabled.rs  mod.rs
src/types/: acl.rs  args.rs  builder.rs  client.rs  cluster.rs  config.rs  from_tuple.rs  geo.rs  lists.rs  misc.rs  mod.rs  multiple.rs  redisearch.rs  scan.rs  scripts.rs  sorted_sets.rs  streams.rs  timeseries.rs
tests/: README.md  doc-glommio.sh  doc.sh  docker-compose.yml  environ  lib.rs  minikube.md  run.sh  run_all.sh  run_sentinel.sh  run_with_chaos_monkey.sh  sentinel-docker-compose.yml
tests/chaos_monkey/: README.md  mod.rs  move_foo.sh  restart_centralized.sh  restart_clustered.sh  util.sh
tests/integration/: centralized.rs  clustered.rs  docker.rs  mod.rs  utils.rs
tests/runners/: all-features.sh  cluster-rustls.sh  cluster-tls.sh  default-features.sh  docker-bash.sh  everything.sh  loose-nils.sh  mocks.sh  no-features.sh  sentinel-features.sh
tests/scripts/: build-gh-pages.sh  check_features.sh  create-cluster-tls.sh  docker-install-redis-sentinel.sh  full_install.sh  install_redis_centralized.sh  install_redis_clustered.sh  stop_all_redis.sh  tls-creds.sh  utils.sh
(+1381 files in other folders)
