[package]
authors = ["Alec Embke <aembke@gmail.com>"]
description = "Common types and interfaces for the `fred` Valkey & Redis client."
edition = "2021"
exclude = ["tests", ".circleci", "bin", ".github", "doc"]
homepage = "https://github.com/aembke/fred.rs"
license = "MIT"
name = "fred-common"
readme = "README.md"
repository = "https://github.com/aembke/fred.rs"
rust-version = "1.75"
version = "1.0.0"

[lib]
doc = true
name = "fred_common"
test = true

[package.metadata.docs.rs]
# do not show the glommio version of the docs
features = [
    "dns",
    "transactions",
    "mocks",
    "metrics",
    "replicas",
    "sentinel-auth",
    "unix-sockets",
    "enable-rustls",
    "enable-native-tls",
    "full-tracing",
    "credential-provider",
    "dynamic-pool",
    "tcp-user-timeouts",
    "i-tracking",
    "i-cluster",
    "i-streams",
    "i-scripts",
    "i-geo"
]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
transactions = []
debug-ids = []
network-logs = []
custom-reconnect-errors = []
default-nil-types = []
metrics = []
replicas = []
sentinel-auth = []
dns = ["hickory-resolver"]
serde-json = ["serde_json"]
unix-sockets = []
credential-provider = []
dynamic-pool = ["metrics"]
tcp-user-timeouts = []
mocks = ["fred-macros"]

i-tracking = []
i-geo = []
i-scripts = []
i-streams = []
i-sorted-sets = []
i-cluster = []

glommio = ["dep:glommio", "futures-io", "pin-project", "oneshot", "futures-lite"]

# Enables rustls with the rustls/aws_lc_rs crypto backend
enable-rustls = [
    "rustls",
    "tokio-rustls",
    "rustls-native-certs",
    "rustls/std",
    "tokio-rustls/logging",
    "tokio-rustls/tls12",
    "tokio-rustls/aws_lc_rs",
]

# Enables rustls with the rustls/ring backend
enable-rustls-ring = [
    "rustls",
    "tokio-rustls",
    "rustls-native-certs",
    "rustls/std",
    "tokio-rustls/logging",
    "tokio-rustls/tls12",
    "tokio-rustls/ring",
]

# Enables native tls
enable-native-tls = ["native-tls", "tokio-native-tls"]

# Full and partial tracing
full-tracing = ["partial-tracing"]
partial-tracing = ["tracing", "tracing-futures"]

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bytes-utils = { workspace = true }
float-cmp = { workspace = true }
futures = { workspace = true, features = ["std"] }
log = { workspace = true }
parking_lot = { workspace = true }
rand = { version = "0.8" }
semver = { workspace = true }
socket2 = { workspace = true }
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }
serde_json = { version = "1.0", optional = true }
fred-macros = { workspace = true, optional = true }
url = { workspace = true }
urlencoding = { workspace = true }
redis-protocol = { workspace = true }
# Tokio  Dependencies
tokio = { workspace = true, features = [
    "net",
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-stream = { workspace = true }
# Glommio Dependencies
glommio = { version = "0.9.0", optional = true }
futures-io = { version = "0.3", optional = true }
pin-project = { version = "1.1.5", optional = true }
oneshot = { version = "0.1.8", optional = true, features = ["async"] }
futures-lite = { version = "2.3", optional = true }
# Monoio Dependencies
monoio = { version = "0.2.4", optional = true, features = ["bytes"] }
monoio-codec = { version = "0.3.4", optional = true }
monoio-native-tls = { version = "0.4.0", optional = true }
monoio-rustls = { version = "0.4.0", optional = true }
local-sync = { version = "0.1.1", optional = true }
# TLS Dependencies
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
rustls = { version = "0.23", default-features = false, optional = true }
rustls-native-certs = { version = "0.8", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
# DNS Features
trust-dns-resolver = { version = "0.23", optional = true, features = ["tokio"] }
hickory-resolver = { version = "0.24", optional = true, features = ["tokio"] }
